--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -2,7 +2,7 @@ center{
     color:white
 }
 .background {
-    background-image: url(https://yumii.s-ul.eu/a6BUfqvL.gif);
+    background-image: url(https://yumii.s-ul.eu/a6BUfqvL);
     background-position: center;
     background-size: cover;
     overflow: hidden;
