--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -2,8 +2,5 @@ center{
     color:white
 }
 .background {
-    background-image: url(https://yumii.s-ul.eu/a6BUfqvL);
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
+    background-image: url('https://yumii.s-ul.eu/a6BUfqvL.gif');
   }
