--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -1,6 +1,11 @@
 center{
     color:white
 }
-.background {
-    background-image: url('https://yumii.s-ul.eu/a6BUfqvL.gif');
-  }
+body {
+    background-image:url('https://yumii.s-ul.eu/a6BUfqvL.gif');
+    background-size:100%;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+    height:100%;
+    width:100%;
+}
