--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -6,6 +6,6 @@ body {
     background-size:100%;
     background-repeat: repeat-y;
     background-attachment: fixed;
-    height:100%;
-    width:100%;
+    max-height:100%;
+    max-width:100%;
 }
