--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -9,3 +9,10 @@ body {
     max-height:100%;
     max-width:100%;
 }
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+  }
