hopefully getting text in the middle of the screen

--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -1,6 +1,9 @@
 center{
     color:white
 }
+h1{
+    color:white
+}
 body {
     background-image:url('https://yumii.s-ul.eu/a6BUfqvL.gif');
     background-size:100%;
@@ -9,8 +12,8 @@ body {
     max-height:100%;
     max-width:100%;
 }
-.centered {
-    position: fixed;
+  .centered {
+    position: fixed; /* or absolute */
     top: 50%;
     left: 50%;
     /* bring your own prefixes */
