--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -12,10 +12,15 @@ body {
     max-height:100%;
     max-width:100%;
 }
-  .centered {
+.centered {
     position: fixed; /* or absolute */
     top: 50%;
     left: 50%;
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
+    display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
   }
+ 
