--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -11,6 +11,7 @@ body {
     background-attachment: fixed;
     max-height:100%;
     max-width:100%;
+    filter: blur(85)
 }
  div center{
     display: flex;
