--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -11,7 +11,8 @@ body {
     background-attachment: fixed;
     max-height:100%;
     max-width:100%;
-    filter: blur(85)
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
 }
  div center{
     display: flex;
@@ -19,3 +20,18 @@ body {
             align-items: center;
             height: 100vh;
  }
+ .bg-text {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+  }
