blurring the bg.. hopefully..

--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -6,6 +6,7 @@ h1{
 }
 body {
     background-image:url('https://yumii.s-ul.eu/a6BUfqvL.gif');
+    filter:blur(8px)
     background-size:100%;
     background-repeat: repeat-y;
     background-attachment: fixed;
@@ -18,18 +19,3 @@ body {
             align-items: center;
             height: 100vh;
  }
- .bg-text {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-    color: white;
-    font-weight: bold;
-    border: 3px solid #f1f1f1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 80%;
-    padding: 20px;
-    text-align: center;
-  }
