--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -18,3 +18,12 @@ body {
             align-items: center;
             height: 100vh;
  }
+ .twt {
+    display: flex;
+}
+
+.yt {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
