--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -5,12 +5,7 @@ h1{
     color:white
 }
 body {
-    background-image:url('https://yumii.s-ul.eu/a6BUfqvL.gif');
-    background-size:100%;
-    background-repeat: repeat-y;
-    background-attachment: fixed;
-    max-height:100%;
-    max-width:100%;
+    background-color:#3b3c3d
 }
  div center{
     display: flex;
@@ -27,3 +22,11 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+.avatar {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  
