--- a/aiousdyas.css
+++ b/aiousdyas.css
@@ -32,5 +32,5 @@ body {
 
 @font-face {
     font-family: Roboto;
-    src: url(https://fonts.google.com/specimen/Roboto);
+    src: url(https://yumii.s-ul.eu/wNwTgHCC.ttf);
   }
